# consul-connector-rust

./: .gitignore  Cargo.toml  README.md  build.rs
protos/: connector.proto
src/consul/: config.rs  connector.rs
