[package]
name = "geco-consul-connector"
license = "MIT OR Apache-2.0"
description = "Library used for connecting to GECO Consul server"
homepage = "https://goldeneyetech.com.vn"
documentation = "https://goldeneyetech.com.vn"
repository = "https://github.com/goldeneye-inside/consul-connector-rust"
readme = "README.md"
version = "1.0.0"
authors = ["Tri Dao <minhtri1396@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.6.1" # Protocol Buffer (gRPC)
tonic = { version = "0.3.1", features = ["transport", "codegen", "tls"] } # gRPC

[build-dependencies]
tonic-build = "0.3.1" # Build gRPC
